<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/banner"
            android:padding="8dp"
            android:id="@+id/poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            app:srcCompat="@drawable/placeholder_poster" />

        <LinearLayout
            android:layout_toEndOf="@id/poster"
            android:layout_toRightOf="@id/poster"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:paddingBottom="8dp"
                android:text="@string/movieTitle"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_vote"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_vote"
                android:gravity="center_horizontal"
                android:text="@string/vote" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/seasons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/seasons" />

                <TextView
                    android:id="@+id/episodes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/episodes" />
            </LinearLayout>

            <TextView
                android:id="@+id/releaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_release"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_release"
                android:text="@string/releaseDate" />

            <TextView
                android:id="@+id/currentStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currentStatus" />

            <TextView
                android:id="@+id/toBeContinued"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_be_continued" />
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>