<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="0dp">



    <LinearLayout
        android:layout_margin="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"/>


        <TextView
            android:lineSpacingMultiplier="1.4"
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noDescription"
            android:textSize="17sp" />
        <TextView
            android:lineSpacingMultiplier="1.4"
            android:id="@+id/more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />
    </LinearLayout>

</android.support.v7.widget.CardView>