<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/b"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/poster_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/placeholder_poster"
        android:contentDescription="@string/moviePoster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="6dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/poster_image_view"
        app:layout_constraintStart_toEndOf="@+id/poster_image_view"
        app:layout_constraintTop_toTopOf="@+id/poster_image_view" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="2"
        android:text="@string/movieTitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/poster_image_view" />

    <TextView
        android:id="@+id/movieRuntime"
        style="@style/cardviewDescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/ic_runtime"
        android:drawablePadding="4dp"
        android:text="@string/runtime"
        android:textColor="@color/information"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintEnd_toStartOf="@+id/movieReleaseDate"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/movie_vote"
        style="@style/cardviewDescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_vote"
        android:drawablePadding="4dp"
        android:text="@string/vote"
        android:textColor="@color/information"
        app:layout_constraintEnd_toEndOf="@+id/movieRuntime"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/movieRuntime" />

    <TextView
        android:id="@+id/movieReleaseDate"
        style="@style/cardviewDescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_release"
        android:drawablePadding="4dp"
        android:text="@string/releaseDate"
        android:textColor="@color/information"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toEndOf="@+id/movieRuntime"
        app:layout_constraintTop_toTopOf="@+id/movieRuntime" />

</androidx.constraintlayout.widget.ConstraintLayout>