<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:transitionName="card"
    android:id="@+id/card_view"
    style="@style/cardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="5dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/relativeLayout">

        <ImageView
            android:transitionName="poster"
            android:contentDescription="@string/moviePoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_poster_image_view"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:contentDescription="@string/addToWatchedlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/watched_button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_add_watchedlist"/>

        <ImageButton
            android:contentDescription="@string/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remove_button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_remove"
            android:layout_below="@+id/watched_button"/>

        <TextView
            android:text="@string/movieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_toRightOf="@+id/movie_poster_image_view"
            android:layout_toEndOf="@+id/movie_poster_image_view"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toStartOf="@+id/watched_button"
            android:layout_toLeftOf="@+id/watched_button"
            android:transitionName="title"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toStartOf="@+id/watched_button"
            android:layout_toLeftOf="@+id/watched_button"
            android:layout_toRightOf="@+id/movie_poster_image_view"
            android:layout_toEndOf="@+id/movie_poster_image_view"
            android:layout_below="@+id/movie_title">

            <TextView
                android:text="@string/runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_runtime"
                style="@style/cardviewDescriptionText"
                android:transitionName="runtime"/>

            <TextView
                android:text="@string/vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_vote"
                style="@style/cardviewDescriptionText"
                android:transitionName="vote"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>