<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    style="@style/cardView"
    android:layout_margin="5dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/poster_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/placeholder_poster"
            android:contentDescription="@string/moviePoster" />

        <View
            android:id="@+id/view"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/poster_image_view"
            android:layout_alignTop="@+id/poster_image_view"
            android:layout_toEndOf="@+id/poster_image_view"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/texts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/buttons"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/view"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:maxLines="1"
                android:text="@string/movieTitle"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/movieReleaseDate"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_release"
                style="@style/cardviewDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/releaseDate"
                android:textColor="@color/information" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/poster_image_view"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/view"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/to_watchlist_button"
                style="@style/CardActions"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp"
                android:text="@string/not_seen" />

            <Button
                android:id="@+id/history_button"
                style="@style/CardActions"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp"
                android:text="@string/movie_seen" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>