<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="de.cineaste.android.fragment.ImportFinishedDialogFragment">

    <LinearLayout
        android:id="@+id/texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headline"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/importHeadline" />

        <TextView
            android:id="@+id/movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/importedMovies" />

        <TextView
            android:id="@+id/series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/importedSeries" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/texts"
        android:layout_margin="8dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/ok"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@android:string/ok"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</RelativeLayout>