<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:id="@+id/cardView"
    android:orientation="vertical"
    app:cardCornerRadius="0dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/poster_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/posterDescription" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp">

            <TextView
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:id="@+id/season"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currentSeason"
                />

            <TextView
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:id="@+id/episodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/episodes" />

            <TextView
                android:id="@+id/releaseDate"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_release"
                android:text="@string/releaseDate"/>

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>