<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   android:id="@+id/card_view"
                                   style="@style/cardView">

    <RelativeLayout
            android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/poster_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/placeholder_poster"
            android:contentDescription="@string/posterDescription" />

        <View
            android:id="@+id/view"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/poster_image_view"
            android:layout_alignTop="@+id/poster_image_view"
            android:layout_toEndOf="@+id/poster_image_view"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/texts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/poster_image_view"
            android:layout_toEndOf="@+id/view"
            android:layout_toStartOf="@+id/episode_seen"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:maxLines="2"
                android:text="@string/movieTitle"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:id="@+id/seasons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/vote"
                        style="@style/cardViewDescriptionText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        android:drawableStart="@drawable/ic_vote"
                        android:text="@string/vote"
                        android:textColor="@color/information" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/season"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/seasons" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/current"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/currentStatus" />

        </LinearLayout>

        <ImageButton
            style="@style/BorderlessButton"
        android:id="@+id/episode_seen"
        android:layout_alignBottom="@+id/poster_image_view"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/remove"
        android:src="@drawable/ic_done" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>