<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    style="@style/cardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context="de.cineaste.android.fragment.MovieDetailsFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:contentDescription="@string/moviePoster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/movie_poster"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/movie_poster"
                    android:layout_toRightOf="@+id/movie_poster"
                    android:text="@string/movieTitle"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <TextView
                    android:id="@+id/movie_runtime"
                    style="@style/cardviewDescriptionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/movie_title"
                    android:layout_alignStart="@+id/movie_title"
                    android:layout_below="@+id/movie_title"
                    android:layout_marginTop="16dp"
                    android:text="@string/runtime"/>

                <TextView
                    android:id="@+id/movie_vote"
                    style="@style/cardviewDescriptionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/movie_runtime"
                    android:layout_alignStart="@+id/movie_runtime"
                    android:layout_below="@+id/movie_runtime"
                    android:layout_marginTop="8dp"
                    android:text="@string/vote"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.CardView>